@@ -1,3 +1,10 @@
+2012-11-20 12:50-EST Gregory John Casamento <greg.casamento@gmail.com>
+
+	* Headers/Foundation/NSMetadata.h: Declaratioins for constants and
+	NSMetadataItem.
+	* Source/NSMetadata.m: Implementation of NSMetadataItem and definition
+	of constants.
+
 2012-11-19 18:54-CET Ivan Vučica <ivan@vucica.net>
 
 	* Source/GSInvocation.h: Renamed GSFrameInvocation to
